<?xml version="1.0" encoding="utf-8"?>
<!--Using relative layout to position top bar at the top of the screen -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#4CAF50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/top_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="Android Development Quiz"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="246dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/a"
            android:textColor="@android:color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:backgroundTint="#5BD91B"
                android:text="@string/true_text"
                android:textSize="20sp" />


            <Button
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#E33328"
                android:text="@string/false_text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#DFD2D1"
                android:src="@drawable/baseline_keyboard_arrow_left_black_18dp"
                android:text="@string/prev_text" />


            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#DFD2D1"
                android:src="@drawable/baseline_keyboard_arrow_right_black_18dp"
                android:text="@string/next_text" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
